[package]
name = "khazanah-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
regex = "1.7.1"
quick-xml = { version = "0.27.1", features = ["serialize"] }
serde = "1.0"
zip = "0.6.4"
thiserror = "1.0"
uuid = { version = "1.3.0", features = ["v4"] }
bimap = "0.6.2"
