[package]
name = "khazanah-core"
description = "Data structures and common utilities for khazanah"
authors = ["ManEnfu <manenfu@protonmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
regex = "1.8"
quick-xml = "0.29"
zip = "0.6"
thiserror = "1.0"
uuid = { version = "1.4", features = ["v4"] }
bimap = "0.6"
rand = "0.8"
