[package]
name = "khazanah-gtk"
description = "Language construction tool"
authors = ["ManEnfu <manenfu@protonmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
khazanah-core = { path = "../khazanah-core" }
gtk = { package = "gtk4", version = "0.6", features = [ "v4_10" ] }
adw = { package = "libadwaita", version = "0.4", features = [ "gtk_v4_10", "v1_3" ] }
log = "0.4"
env_logger = "0.9"
once_cell = "1.18"
uuid = { version = "1.4", features = [ "v4" ]}

[build-dependencies]
glib-build-tools = "0.17.0"
