[package]
name = "khazanah"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conlang = { path = "../conlang" }
gtk = { package = "gtk4", version = "0.6.1", features = [ "v4_6" ] }
adw = { package = "libadwaita", version = "0.3.1", features = [ "gtk_v4_6", "v1_2" ] }
log = "0.4.0"
env_logger = "0.9.0"
once_cell = "1.17.1"
uuid = { version = "1.3.0", features = [ "v4" ]}

[build-dependencies]
glib-build-tools = "0.17.0"
